--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                         <div class="h4 mt-0 title">About</div>
                                  <p>Hello! I am Saradha Priya Nandhini.Beginning as a Full Stack Developer</p>
                                         <p>
-                                             My objectives is simply to be the best developer that I can be and to contribute to the technology industry that all I know and can do.I believe that my understanding of problem solving and good grasping power are also skills that have and will continue to contribute to all my success as s developer</p>
+                                             My objectives is simply to be the best developer that I can be and to contribute to the technology industry that all I know and can do.I believe that my understanding of problem solving and good grasping power are also skills that have and will continue to contribute to all my success as a developer</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-12">
