--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                 <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                     <div class="card-body cc-education-header">
                                         <p>2014-2015</p>
-                                        <div class="h5">SSLC</div>
+                                        <div class="h5">HCS</div>
                                     </div>
                                 </div>
                                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -295,7 +295,7 @@
                                 <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                     <div class="card-body cc-education-header">
                                         <p>2012-2013</p>
-                                        <div class="h5">HSC</div>
+                                        <div class="h5">SSLC</div>
                                     </div>
                                 </div>
                                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
